# mcp-swarm

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  README.md  main.py  pyproject.toml
docs/: PROTOCOL.md
examples/: agent_communication.py  basic_agent.py  basic_logging.py
src/mcp_swarm/: __init__.py
src/mcp_swarm/agents/: __init__.py  base.py
src/mcp_swarm/agents/specialized/: __init__.py
src/mcp_swarm/config/: __init__.py  logging.py  settings.py
src/mcp_swarm/core/: __init__.py  agent.py  orchestrator.py  protocol.py  registry.py  transport.py  validator.py
src/mcp_swarm/utils/: __init__.py  discovery.py  monitoring.py  state.py
tests/: __init__.py  conftest.py
tests/unit/config/: test_logging.py  test_settings.py
tests/unit/core/: test_agent.py  test_protocol.py  test_registry.py  test_transport.py  test_validator.py
